--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,23 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   background-color: #000;
   padding: 50px;
+  min-height: 100vh;
+  color: white;
+}
+
+.App a {
+  color: white;
+}
+
+.App a:visited {
+  color: grey;
 }
 
 .App-header {
   font-size: calc(10px + 2vmin);
-  color: white;
   margin: 30px auto;
 }
 
